[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/HomingEnemy.png" type="Texture" id=1]
[ext_resource path="res://Mechanics/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/BasicEnemy.gd" type="Script" id=3]
[ext_resource path="res://Mechanics/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/EnemyFollowBullet.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 3 )

[node name="Enemy" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
speed = 18
health = 6
gainedScore = 195
explosionSize = 0.4
canShoot = true
fireRate = 2.5
firePositionYAdjustment = 3
ammunition = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]

[editable path="HitBox"]

[editable path="HurtBox"]
